<resources>
    <string name="app_name">EightyTwenty</string>
    <string name="text_description">Записывай идеи в ту же секунду, как они \n приходят. Добавляй в заметки картинки,\n меняй оформление и делись с друзьями</string>
    <string name="text_skip">Пропустить</string>
    <string name="text_next">Продолжить</string>
    <string name="text_become_productivity">Стать продуктивнее</string>

    <string name="text_task_title">Создавай задачи</string>
    <string name="text_task_description">Задачи с большой, но очень простой \nкастомизацией для любых нужд и целей. Не \nдумай, мы подумали за тебя, просто делай</string>

    <string name="text_note_title">Пиши заметки</string>
    <string name="text_note_description">Записывай идеи в ту же секунду, как они \nприходят. Добавляй в заметки картинки,\nменяй оформление и делись с друзьями</string>

    <string name="text_habit_title">Формируй привычки</string>
    <string name="text_habit_description">Выработай в себе полезные и очень важные \nпривычки. Становись лучшей версией себя \nкаждый день</string>

    <string name="text_time_title">Всё по полочкам</string>
    <string name="text_time_description">Благодаря умной системе списков, тебе \nникогда не придётся искать свою задачу \nили заметку среди списка всех задач</string>

    <string name="our_choice_text">Наш выбор</string>
    <string name="health_text">Здоровье</string>
    <string name="sport_text">Спорт</string>
    <string name="study_text">Учёба</string>
    <string name="thinking_text">Мышление</string>

    <string name="reminder_bill_text">Платежи</string>
    <string name="reminder_pill_text">Лекарства</string>
    <string name="reminder_water_text">Вода</string>

    <string name="text_btn_done">Done</string>
    <string name="per_day_count">%d /</string>

    <string name="text_abbreviation_mon">Пн </string>
    <string name="text_abbreviation_tue">Вт </string>
    <string name="text_abbreviation_wed">Ср </string>
    <string name="text_abbreviation_thurs">Чт </string>
    <string name="text_abbreviation_fri">Пт </string>
    <string name="text_abbreviation_sat">Сб </string>
    <string name="text_abbreviation_sun">Вс </string>
    <string name="text_don_t_repeat">Не повторять</string>

    <string name="text_monday">Понедельник</string>
    <string name="text_tuesday">Вторник</string>
    <string name="text_wednesday">Среда</string>
    <string name="text_thursday">Четверг</string>
    <string name="text_friday">Пятница</string>
    <string name="text_saturday">Суббота</string>
    <string name="text_sunday">Воскресенье</string>

    <string name="text_frequency_daily">По дням</string>
    <string name="text_frequency_weekly">По неделям</string>
    <string name="text_frequency_random">Произвольно</string>

    <!-- This part includes texts which is related to category note screen  -->

    <string name="text_category_note_new_list">новая списка</string>

    <!-- This part includes texts which is related to habit screen -->

    <string name="text_habit_my_habit">Мои привычки</string>

    <!-- This part includes texts which is related to new habit screen -->

    <string name="text_new_habit_title">Новая привычка</string>
    <string name="text_new_habit_habit_name">Название привычки</string>
    <string name="text_new_habit_habit_desc">Мотивация и описания</string>
    <string name="text_new_habit_habit_per_day_count">Количество за выполнения</string>
    <string name="text_new_habit_habit_goal_type">Тип выполнения</string>
    <string name="text_new_habit_habit_select_color">Выберите цвет</string>
    <string name="text_new_habit_habit_frequency_doing">Частота выполнения</string>
    <string name="text_new_habit_habit_end_goal_count">Конечная цель для выполнения</string>

    <!-- This part includes texts which is related to new note screen -->

    <string name="text_new_note_title">Заголовок</string>
    <string name="text_new_note_desc">Заметка</string>

    <!-- This part includes texts which is related to new note screen -->

    <string name="text_new_task_folder">Список</string>
    <!-- This part includes texts which is related to common -->

    <string name="text_iv_back">Back</string>
    <string name="text_iv_search">Search</string>
    <string name="text_iv_undo">Undo</string>
    <string name="text_iv_image">Image</string>
    <string name="text_iv_redo">Redo</string>
    <string name="text_iv_move_to_inbox">Move to inbox</string>
    <string name="text_iv_delete">Delete</string>
    <string name="text_iv_folder">Folder</string>
    <string name="text_btn_next">Продолжить</string>
    <string name="text_btn_save">Сохранить</string>
    <string name="text_btn_apply">Применить</string>

    <string-array name="pill_type">
        <item>Таблетка</item>
        <item>Жидкость</item>
        <item>Капсула</item>
        <item>Инъекция</item>
        <item>Капли</item>
    </string-array>

    <string-array name="pill_units">
        <item>mg</item>
        <item>time</item>
        <item>drop</item>
    </string-array>

    <string-array name="pill_frequency">
        <item>Ежедневный</item>
        <item>Еженедельно</item>
    </string-array>

    <string-array name="bill_types">
        <item>Жилье</item>
        <item>За коммунал</item>
        <item>Газ</item>
        <item>Нетфликс</item>
        <item>Плата за обучение</item>
    </string-array>

    <string-array name="water_frequency">
        <item>В течение одного часа</item>
        <item>Через два часа</item>
        <item>Через шесть часов</item>
        <item>В день</item>
    </string-array>
</resources>
