<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/text_iv_back"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_new_habit_title"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/iv_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:viewBindingIgnore="true" />

            <TextView
                android:id="@+id/tv_habit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_new_habit_habit_name"
                android:textColor="@color/black_60"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title" />

            <EditText
                android:id="@+id/et_habit_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_new_habit"
                android:elevation="2dp"
                android:autofillHints=""
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_habit_name" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_new_habit_habit_desc"
                android:textColor="@color/black_60"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_habit_name" />

            <EditText
                android:id="@+id/et_description"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_new_habit"
                android:elevation="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints=""
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description" />

            <TextView
                android:id="@+id/tv_per_day_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_new_habit_habit_per_day_count"
                android:textColor="@color/black_60"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description" />

            <EditText
                android:id="@+id/et_per_day_count"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_new_habit"
                android:elevation="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="numberDecimal"
                android:autofillHints=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_per_day_count" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_goal_type"
                style="@style/DropDown"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:hint="@string/text_new_habit_habit_goal_type"
                app:layout_constraintBottom_toBottomOf="@id/et_per_day_count"
                app:layout_constraintStart_toEndOf="@id/et_per_day_count"
                app:layout_constraintTop_toTopOf="@id/et_per_day_count">

                <AutoCompleteTextView
                    android:id="@+id/act_goal_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:fontFamily="@font/roboto"
                    android:inputType="none"
                    android:labelFor="@id/til_goal_type"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_end_goal_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_new_habit_habit_end_goal_count"
                android:textColor="@color/black_60"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_goal_type" />

            <EditText
                android:id="@+id/et_end_goal_count"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_new_habit"
                android:elevation="2dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:autofillHints=""
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_end_goal_count" />

            <TextView
                android:id="@+id/tv_frequency_doing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_new_habit_habit_frequency_doing"
                android:textColor="@color/black_60"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_end_goal_count" />

            <include
                android:id="@+id/view_holder_schedule"
                layout="@layout/view_holder_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tv_frequency_doing" />

            <TextView
                android:id="@+id/tv_select_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_new_habit_habit_select_color"
                android:textColor="@color/black_60"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_holder_schedule" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_colors"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_habit_color"
                android:clipToPadding="false"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_color"
                tools:listitem="@layout/view_holder_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_habit"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/sun_glow"
                android:fontFamily="@font/roboto"
                android:text="@string/text_btn_next"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_colors" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>